--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <section>
         <div class="header">
             <div class="navbar">
-                <a>About Us</a>
-                <a>Contacts</a>
-                <a>Overview</a>
-                <a>Project Design</a>
+                <a href="#">About Us</a>
+                <a href="#">Contacts</a>
+                <a href="#">Overview</a>
+                <a href="#">Project Design</a>
             </div>
         </div>
     </section>
