--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+        <div id="bottom">
+            
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
