--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
     <section class="footer">
         <div id="bottom">
-            
+            <p> We are learning JS</p>
         </div>
     </section>
     <script src="script.js"></script>
