--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </section>
     <section class="footer">
         <div id="bottom">
-            <p> We are learning JS</p>
+            <p> We are learning JS and going step by step to understand the basic</p>
+            
         </div>
     </section>
     <script src="script.js"></script>
