--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a href="#">Contacts</a>
                 <a href="#">Overview</a>
                 <a href="#">Project Design</a>
+                <p>World News</p>
             </div>
         </div>
     </section>
