--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <a href="#">Contacts</a>
                 <a href="#">Overview</a>
                 <a href="#">Project Design</a>
-                <p>World News</p>
+                <p>World News second report before sharing all the infos</p>
+
             </div>
         </div>
     </section>
