--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <a href="#">Overview</a>
                 <a href="#">Project Design</a>
                 <p>World News second report before sharing all the infos</p>
+                <button id="demo">Click</button>
+document.getElementById("demo").addEvenListener("click", myFunction);
 
             </div>
         </div>
