--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
     <section>
-        <div class="header">
+        <button>Click</button>
+        <div class="header" id="header">
             <div class="navbar">
                 <a href="#">About Us</a>
                 <a href="#">Contacts</a>
                 <a href="#">Overview</a>
                 <a href="#">Project Design</a>
                 <p>World News second report before sharing all the infos</p>
-                <button id="demo">Click</button>
-document.getElementById("demo").addEvenListener("click", myFunction);
-
+                
             </div>
         </div>
     </section>
