--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <button>Click</button>
+        <button onclick="changeColor()">Click</button>
         <div class="header" id="header">
             <div class="navbar">
                 <a href="#">About Us</a>
@@ -20,6 +20,9 @@
                 
             </div>
         </div>
+        <section class="main">
+
+        </section>
     </section>
     <section class="footer">
         <div id="bottom">
